--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "concurrently vite \"json-server-auth --watch db.json\"",
         "build": "vite build",
         "preview": "vite preview"
     },
@@ -12,6 +12,7 @@
         "vite": "^4.3.2"
     },
     "dependencies": {
+        "joi": "^17.9.2",
         "navigo": "^8.11.1",
         "tailwindcss": "^3.3.2"
     }
