--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "vite": "^4.3.2"
     },
     "dependencies": {
+        "axios": "^1.4.0",
         "joi": "^17.9.2",
         "navigo": "^8.11.1",
         "tailwindcss": "^3.3.2"
